--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Roboto:ital,wght@0,400;1,300&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+/* header component */
+
+a {
+  color: white;
+  text-decoration: none;
+  margin: 1vmax;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+h2 {
+  color: white;
+}
+.header {
+  height: 100px;
+  background-color: rgb(16, 16, 16);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header > img {
+  height: 100%;
+}
+.header > div {
+  width: 100%;
+  margin-left: 4vmax;
+}
+.header > svg {
+  color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.header > :hover {
+  color: rgb(216, 216, 216);
 }
